chore - next batch of typos correction (new Grazie professional plugin is useful)